(library
    (name EditorInputTest)
    (public_name editor-input-test)
    (flags (:standard (-w -39)))
    (ocamlopt_flags -linkall -g)
    (libraries editor-input rely.lib)
    (modules (:standard \ TestRunner)))

(executable
  (package editor-input-test)
  (name TestRunner)
  (public_name TestRunner)
  (libraries editor-input-test)
  (modules TestRunner))
